--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -1,39 +1,50 @@
-.wrapper{
-width: 1200px;
-margin: 0 auto;
+html{
+    box-sizing: border-box;
 }
-font-family: 'Playfair Display', serif;
-font-family: 'Ubuntu', sans-serif;
-.navigation{
-    width: 572px;
+*,
+* ::before, 
+* ::after{
+    box-sizing: inherit;
+}
+main{
+    width: 1200px;
     margin: 0 auto;
-    margin-top: 77px;
 }
-.navigation a{
-    margin-left: 121px;
-    font-family: PlayfairDisplay;
+body{
+    width: 900px;
+    height: 1933px;
+}
+a{
     color:  #626262;
-    font-size: 14px;/* Приближение из-за подстановки шрифтов */
-    font-weight: 400;
-    line-height: 24px;/* Приближение из-за подстановки шрифтов */
+    text-decoration: none;
+    font-family: PlayfairDisplay;
+}
+a:hover{
+    color:  #03a9f4;
+}
+
+li{
+    margin-left: 0 auto;
+    font-family: PlayfairDisplay;
+    font-size: 14px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
 }
-/*.navigation a:first-child{
-    margin-left: 100px;
-}*/
-.navigation ul li{
+header{
+    width: 572px;
+    margin: 0 auto;
+    margin-top: 77px;
+}
+nav ul li{
     list-style: none;
     display: inline-block;
-    margin-left: 54px;
+    margin-left: 54px;  
 }
-.navigation ul li:first-child{
+nav ul li:first-child{
     margin-left: 0;
 }
-.navigation ul li:nth-child(3){
-    margin-left: 0px;
-}
-.navigation a:hover{
-    color:  #03a9f4;
+nav ul li:last-child{
+    margin-left: 94px;
+    margin-right: 0;
 }
