--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -1,36 +1,79 @@
-html{
+/* html{
     box-sizing: border-box;
 }
-*,
+ */
+/* *,
 * ::before, 
 * ::after{
     box-sizing: inherit;
+} */
+body{
+    width: 1200px;
 }
 main{
     width: 1200px;
     margin: 0 auto;
 }
-body{
-    width: 900px;
-    height: 1933px;
+
+.container{
+    width: 1200px;
+    padding-top: 100px;
+    padding-bottom: 69px;
+    margin: 0 auto;
 }
 a{
     color:  #626262;
     text-decoration: none;
     font-family: PlayfairDisplay;
 }
-a:hover{
+a:hover, a:focus{
     color:  #03a9f4;
 }
 
 li{
-    margin-left: 0 auto;
-    font-family: PlayfairDisplay;
+    margin: 0 auto;
+    margin-bottom: 0;
     font-size: 14px;
-    text-align: center;
+    text-align: center; 
     text-decoration: none;
     text-transform: uppercase;
+    display: inline-block;
 }
+
+li .left1{
+    text-align: left;
+    /* float: left; */
+    margin:0;
+    margin-bottom: 30px;
+    font-family: Ubuntu;
+    font-size: 14px;
+    color:  #b4ad9e;    
+}
+li .right1{
+    float: right; 
+    margin:0;
+    margin-bottom: 30px;      
+    font-family: Ubuntu;
+    font-size: 14px;
+    color:  #b4ad9e;
+}
+h3{
+    margin: 0;
+    margin-bottom: 40px;
+    font-family: PlayfairDisplay;
+    width: 420px;
+    margin-right: 0;
+}
+/* h3 .left{
+    font-family: PlayfairDisplay;
+    margin: 0 0 30 0;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: 400;
+    width: 420px;
+    display: block;
+
+} */
 header{
     width: 572px;
     margin: 0 auto;
@@ -38,13 +81,35 @@ header{
 }
 nav ul li{
     list-style: none;
-    display: inline-block;
     margin-left: 54px;  
 }
 nav ul li:first-child{
     margin-left: 0;
 }
-nav ul li:last-child{
-    margin-left: 94px;
-    margin-right: 0;
+
+li .left, .right{
+    float: right;
+    margin: 0;
+    padding: 0;
+}
+li .left{
+    margin-bottom: 0;
+}
+
+
+img {
+    margin: 0 auto;
+    padding: 0;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+img .down1{
+    padding-right: 120px;
+}
+
+ul{
+    margin: 0 auto;
+    margin-left: 120px;
+    padding: 0;
 }
