--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -32,7 +32,8 @@ a:hover, a:focus{
 
 li{
     margin: 0 auto;
-    margin-bottom: 0;
+    margin-left: 30px;
+    margin-bottom: 30px;
     font-size: 14px;
     text-align: center; 
     text-decoration: none;
@@ -44,6 +45,7 @@ li .left1{
     text-align: left;
     /* float: left; */
     margin:0;
+    margin-left: 30px;
     margin-bottom: 30px;
     font-family: Ubuntu;
     font-size: 14px;
@@ -61,19 +63,11 @@ h3{
     margin: 0;
     margin-bottom: 40px;
     font-family: PlayfairDisplay;
+    display: inline-block;
     width: 420px;
     margin-right: 0;
 }
-/* h3 .left{
-    font-family: PlayfairDisplay;
-    margin: 0 0 30 0;
-    margin-bottom: 30px;
-    font-size: 30px;
-    font-weight: 400;
-    width: 420px;
-    display: block;
 
-} */
 header{
     width: 572px;
     margin: 0 auto;
@@ -101,15 +95,19 @@ img {
     margin: 0 auto;
     padding: 0;
     margin-right: 30px;
-    margin-bottom: 30px;
+    margin-left: 0;
+    margin-bottom: 0;
 }
 
 img .down1{
     padding-right: 120px;
+    margin: 0;
+    
 }
 
-ul{
+ul .features-list{
     margin: 0 auto;
     margin-left: 120px;
+    margin-right: 120px;
     padding: 0;
 }
