--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -59,6 +59,19 @@ li .right1{
     font-size: 14px;
     color:  #b4ad9e;
 }
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding:0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 h3{
     margin: 0;
     margin-bottom: 40px;
