--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -1,12 +1,11 @@
-/* html{
+html{
     box-sizing: border-box;
 }
- */
-/* *,
+*,
 * ::before, 
 * ::after{
     box-sizing: inherit;
-} */
+}
 body{
     width: 1200px;
 }
@@ -30,35 +29,25 @@ a:hover, a:focus{
     color:  #03a9f4;
 }
 
+ul{
+    padding-left: 150px;
+}
+
 li{
     margin: 0 auto;
     margin-left: 30px;
     margin-bottom: 30px;
+    margin-right: 30px;
     font-size: 14px;
-    text-align: center; 
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
-}
+    }
+    li img .left{
+        margin-right: 30px;
+    }
 
-li .left1{
-    text-align: left;
-    /* float: left; */
-    margin:0;
-    margin-left: 30px;
-    margin-bottom: 30px;
-    font-family: Ubuntu;
-    font-size: 14px;
-    color:  #b4ad9e;    
-}
-li .right1{
-    float: right; 
-    margin:0;
-    margin-bottom: 30px;      
-    font-family: Ubuntu;
-    font-size: 14px;
-    color:  #b4ad9e;
-}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden{
     position: absolute;
@@ -72,55 +61,28 @@ input[type="checkbox"].visually-hidden{
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-h3{
-    margin: 0;
-    margin-bottom: 40px;
-    font-family: PlayfairDisplay;
-    display: inline-block;
+p {
     width: 420px;
-    margin-right: 0;
+    margin-bottom: 30px;
 }
-
-header{
-    width: 572px;
-    margin: 0 auto;
-    margin-top: 77px;
+p .left{
+    text-align: left;
+    font-family: Ubuntu;
+    color:  #b4ad9e;
 }
-nav ul li{
-    list-style: none;
-    margin-left: 54px;  
+p .right{
+    text-align: right;
+    font-family: Ubuntu;
+    color:  #b4ad9e;
 }
-nav ul li:first-child{
-    margin-left: 0;
+img{
+    margin-bottom: 30px;
 }
-
-li .left, .right{
-    float: right;
-    margin: 0;
-    padding: 0;
-}
-li .left{
-    margin-bottom: 0;
-}
-
-
-img {
-    margin: 0 auto;
-    padding: 0;
+img .left{
     margin-right: 30px;
-    margin-left: 0;
-    margin-bottom: 0;
 }
-
-img .down1{
-    padding-right: 120px;
-    margin: 0;
-    
-}
-
-ul .features-list{
-    margin: 0 auto;
-    margin-left: 120px;
-    margin-right: 120px;
-    padding: 0;
+h3{
+    margin-bottom: 30px;
+    font-family: 'Playfair Display', serif;
+    color:  #626262;
 }
