--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -9,47 +9,50 @@ html{
 body{
     width: 1200px;
 }
-main{
-    width: 1200px;
-    margin: 0 auto;
-}
 
 .container{
-    width: 1200px;
-    padding-top: 100px;
-    padding-bottom: 69px;
+    width: 900px;
     margin: 0 auto;
+    padding-top: 44px;
+    padding-bottom: 70px;
 }
-a{
+
+.link{
+    padding-top: 100px;
+    padding-left: 30px;
+    margin: 0 auto; 
     color:  #626262;
     text-decoration: none;
-    font-family: PlayfairDisplay;
-}
-a:hover, a:focus{
-    color:  #03a9f4;
+    display: block;
 }
 
-ul{
+.link:hover,.link:focus{color:  #03a9f4;}
+
+.navigate{
     padding-left: 150px;
 }
-nav{
-    text-align: center;
+
+.navigation{
+    margin: 0;
+    padding: 0;
 }
 
-li{
-    margin: 0 auto;
-    margin-left: 30px;
-    margin-bottom: 30px;
-    margin-right: 30px;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
-    }
-    li img .left{
-        margin-right: 30px;
-    }
+.features-list{
+margin-right: 30px;
+margin-bottom: 70px;
+font-size: 14px;
+text-decoration: none;
+text-transform: uppercase;
+display: inline-block;
+}
 
+.features-list:nth-child(2n){
+    margin-right: 0;
+}
+
+.features-list:nth-last-child(-n+2){
+    margin-bottom: 0;
+}
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden{
@@ -64,28 +67,30 @@ input[type="checkbox"].visually-hidden{
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-p {
+
+p .left,p .right {
+    font-family: Ubuntu;
+    color:  #b4ad9e;
     width: 420px;
+    margin-bottom: 0px;
+}
+
+p .left0,p .right0{
+    margin-bottom: 0px;
+    -webkit-margin-after: 0;
+}
+
+img .left, img .right{
     margin-bottom: 30px;
 }
-p .left{
-    text-align: left;
-    font-family: Ubuntu;
-    color:  #b4ad9e;
-}
-p .right{
-    text-align: right;
-    font-family: Ubuntu;
-    color:  #b4ad9e;
-}
-img{
-    margin-bottom: 30px;
-}
+
 img .left{
     margin-right: 30px;
 }
-h3{
-    margin-bottom: 30px;
+
+h3 .left, h3 .right{
+    margin-bottom: 0px;
     font-family: 'Playfair Display', serif;
     color:  #626262;
 }
+
