--- a/module-03/hw-03/css/styles.css
+++ b/module-03/hw-03/css/styles.css
@@ -6,8 +6,8 @@ html{
 * ::after{
     box-sizing: inherit;
 }
-body{
-    width: 1200px;
+.head{
+    margin-bottom: 70px;
 }
 
 .container{
@@ -18,9 +18,7 @@ body{
 }
 
 .link{
-    padding-top: 100px;
-    padding-left: 30px;
-    margin: 0 auto; 
+    padding: 28px 28px; 
     color:  #626262;
     text-decoration: none;
     display: block;
@@ -30,6 +28,10 @@ body{
 
 .navigate{
     padding-left: 150px;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-size: 0;
 }
 
 .navigation{
@@ -38,8 +40,6 @@ body{
 }
 
 .features-list{
-margin-right: 30px;
-margin-bottom: 70px;
 font-size: 14px;
 text-decoration: none;
 text-transform: uppercase;
@@ -68,29 +68,50 @@ input[type="checkbox"].visually-hidden{
     overflow: hidden;
 }
 
-p .left,p .right {
+.paragraph {
     font-family: Ubuntu;
     color:  #b4ad9e;
     width: 420px;
-    margin-bottom: 0px;
+    margin: 0px;
+
 }
 
-p .left0,p .right0{
-    margin-bottom: 0px;
-    -webkit-margin-after: 0;
+.image{
+    float: right;
 }
 
-img .left, img .right{
-    margin-bottom: 30px;
-}
-
-img .left{
-    margin-right: 30px;
-}
-
-h3 .left, h3 .right{
-    margin-bottom: 0px;
+.heading{
+    margin: 0px;
     font-family: 'Playfair Display', serif;
     color:  #626262;
+}
+
+.content{
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+}
+
+.content-list-item{
+    width: 420px;
+    display: inline-block;
+    margin-right: 60px;
+    margin-bottom: 130px;
+    font-size: 14px;
+}
+
+.button{
+    font-family: PlayfairDisplay;
+    color:  #626262;
+    font-size: 20px;
+    font-weight: 400;
+    width: 164px;
+    height: 60px;
+    background-color: #ffffff;
+    border-style: solid; 
+}
+
+.button :hover :focus{
+    color:  #03a9f4;
 }
 
