--- a/module-04/hw-04/css/styles.css
+++ b/module-04/hw-04/css/styles.css
@@ -6,40 +6,43 @@ html{
 * ::after{
     box-sizing: inherit;
 }
+
 .logo,
 .products-title, 
 .desc, 
 .news,
-.price
-{font-family: Roboto, sans-serif;}
+.price {
+    font-family: Roboto, sans-serif;
+}
 
 .navigate,
 .subtitle
-.btn
-{font-family: OpenSans, sans-serif;}
+.btn {
+    font-family: OpenSans, sans-serif;
+}
 
 .container{
     width: 1140px;
-    margin: 0;
-    padding-bottom: 130px;
-    padding-top: 36px;
+    margin: 0 auto;
 }
 
 /*  LOGO  */
 
-.site-logo{
-    display: inline-block;
-    width: 78px;
-    margin-left: 0px;
-}
-
-.site-logo::first-letter{
-    color:  #1abc9c;
-}
-
 .logo{
+    text-transform: uppercase;
     text-decoration: none;
     color:  #555252;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 32px;
+    float: left;
+}
+
+.logo::first-letter {
+    color:  #1abc9c;
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 32px;
 }
 
 /*  NAVIGATION  */
@@ -49,34 +52,35 @@ html{
     font-size: 14px;
     font-weight: 700;
     line-height: 11px;
+    height: 70px;
     text-align: left;
     text-decoration: none;
     text-transform: uppercase;
-    margin-bottom: 80px;
+}
+
+.nav {
+    float: right;
+}
+
+.nav ul {
+    margin: 0;
+    padding: 0;
 }
 
 .navigate{
-    text-align: right;
     list-style: none;
     text-decoration: none;
     text-transform: uppercase;
-    display: inline-block;
+    display: block;
     margin: 0;
     padding: 0;
-    width: 1000px;
+    float: right;
 }
 
 .features-list{
-    text-align: right;
-    display: inline-block;
-}
-
-.features-list a{
+    float: right;
+    display: block;
     color: #0f0101;
-}
-
-.features-list :hover{
-    color: #1abc9c;
 }
 
 .link{
@@ -84,12 +88,18 @@ html{
     text-decoration: none;
     line-height: 11px;
     padding-left: 25px;
+    color: #0f0101;
+    float: right;
+}
+
+.link:hover{
+    color: #1abc9c;
 }
 
 /* MAIN */
 
 .products{
-    height: 950px;
+    padding-bottom: 94px;
 }
 
 .desc, 
@@ -100,8 +110,16 @@ html{
     text-transform: uppercase;
 }
 
-.products-list-item{
+.products-list li {
+    display: block;
     position: relative;
+    width: 255px;
+    height: 322px;
+    background: #e9f0fd;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding: 0;
+    float: left;
 }
 
 .products-list{
@@ -110,19 +128,14 @@ html{
     padding: 0;
 }
 
-.products-list-item{
-    margin-right: 30px;
-    margin-bottom: 0;
-    padding: 0;
-    float: left;
-}
-
-.img{
-    margin-bottom: 30px;
+.products-list li:hover .desc {
+    background-color: #1abc9c;
 }
 
 .products-title{
     text-align: center;
+    margin: 0;
+    margin-bottom: 60px;
 }
 
 .products-title::after{
@@ -130,9 +143,8 @@ html{
     display: block;
     width: 162px;
     height: 7px;
+    margin: 0 auto;
     margin-top: 34px;
-    margin-bottom: 90px;
-    margin-left: 490px;
     background-color: #1abc9c;
     text-align: center;
 }
@@ -141,7 +153,8 @@ html{
     position: absolute;
     width: 255px;
     height: 40px;
-    bottom: 34px;
+    top: 282px;
+    bottom: 5px;
     padding: 10px;
     padding-left: 13px;
     margin: 0;
@@ -149,110 +162,133 @@ html{
     color: #fff;
 }
 
-.desc:hover{
-    background-color: #1abc9c;
-}
-
 .price{
-    background-color: #555252;
-    color: #fff;
     position: absolute;
+    background-color: rgba(255, 255, 255, 0.44);
+    color: #ffffff;
     width: 54px;
     height: 40px;
-    left: 201px;
-    padding: 10px;
-    padding-bottom: 0;
-    padding-left: 14px;
     margin:0;
-    bottom: 34px;
-    
+    bottom: 0;
+    right: 0;
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 40px;
+    text-align: center;
 }
 
 
 
 /*  BLOG    */
 
-.footer{
-    width: 1170px;
-}
-
 .blog{
-    width: 1170px;
     margin: 0 auto;
     padding: 0;
 }
 
-.blog-content{
-    padding-left: 0px;
-    margin: 0;
-    font-size: 0;
-    -webkit-padding-start: 0;
-}
-
-.blog-content-item{
-    display: inline-block;
-    list-style: none;
-    /* width: 350px; */
+.blog ul {
     margin: 0;
     padding: 0;
 }
 
-.image{
-    display: block;
-    margin-top: 40px;
-    margin-right: 30px;
-}
-
-.image:nth-child(3){
-    margin-right: 0;
-}
-
 .news{
-    font-family: Roboto;
-    font-weight: 32;
-    color:  #555252;
     text-align: center;
+    margin: 0;
+    margin-bottom: 60px;
 }
 
 .news::after{
-    display: block;
     content: "";
+    display: block;
     width: 162px;
     height: 7px;
-    margin-top: 30px;
-    margin-bottom: 40px;
-    margin-left: 504px;
-    text-align: center;
+    margin: 0 auto;
+    margin-top: 34px;
     background-color: #1abc9c;
+    text-align: center;
+}
+
+.blog-content-item{
+    list-style: none;
+    margin: 0;
+    margin-right: 30px;
+    padding: 0;
+    width: 350px;
+    float: left;
+}
+
+.blog-content-item:last-child {
+    margin-right: 0;
+}
+
+.image {
+    margin-bottom: 10px;
 }
 
 .paragraph{
+    font-family: OpenSans;
+    color:  #555252;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
     width: 355px;
 }
 
 .subtitle{
-    width: 300px;
-    margin-bottom: 15px;
+    font-family: OpenSans, sans-serif;
+    color:  #555252;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 26px;
+    text-align: left;
+    margin: 0;
+    margin-bottom: 22px;
 }
 
 .subtitle::after{
     display: block;
     margin-top: 15px;
-    margin-bottom: 30px;
+    margin: 0;
     height: 3px;
-    width: 140px;
+    width: 136px;
     content: "";
-}
-
-.subtitle::after{
     background-color: #1abc9c;
 }
 
-.btn{
+.paragraph {
     font-family: OpenSans, sans-serif;
-    color: #fff;
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+    margin-bottom: 12px;
+  }
+
+.btn{
+    font-family: OpenSans, serif;
+    display: block;
+    width: 164px;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19px;
+    text-align: center;
     border-radius: 3px;
-    background-color:  #4ec6ab;
-    width: 160px;
-    height: 51px;
+    background-color: #4ec6ab;
+    padding: 16px 43px;
+}
+
+.btn:hover {
+    background-color: #022c23;
+}
+
+.clearfix::after {
+    display: table;
+    content: "";
+    clear: both;
 }
